# spatial_gif_pipeline

./: Makefile  README.md  pyproject.toml
ingest/: models.py  s3_utils.py  species_ingest.py
tests/load/: test_species_load.py
